...
            ElevatedButton(
                style: ElevatedButton.styleFrom(
                    primary: const Color(0xff003b5c)
                ),
                onPressed: (){
              followDH(id);
            }, child: const Text("Follow", style:  TextStyle(color: Color(0xffbf9b30), fontSize: 14,fontWeight: FontWeight.bold),))
        ],)
      ],)
    ));

  }

...
